fix z-index modal

--- a/css/modal.css
+++ b/css/modal.css
@@ -3,7 +3,7 @@
   opacity: 0;
   overflow: none;
   position: fixed;
-  z-index: 1;
+  z-index: -1;
   left: 0;
   top: 0;
   width: 100%;
@@ -14,6 +14,7 @@
   transition: 0.5s;
 }
 .show {
+  z-index: 1;
   height: 100%;
   opacity: 1;
 }
